--- a/trunk/src/404.html
+++ b/trunk/src/404.html
@@ -40,4 +40,6 @@
     </script>
     <script src="http://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js"></script>
   </div>
+</body>
+</html>
 
