--- a/trunk/src/index.html
+++ b/trunk/src/index.html
@@ -13,7 +13,6 @@
         <meta name="description" content="Edit with multitouch gestures canvas objects on a brush">
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <link rel="stylesheet" href="css/style.css">
-        <!--<script src="js/libs/modernizr-2.5.3.min.js"></script>-->
     </head>
     <body>
         <header>
@@ -26,10 +25,11 @@
         <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>-->
         <!-- scripts concatenated and minified via build script -->
+        <script src="js/libs/palette.js"></script>
         <script src="js/cte-0.1.1.js"></script>
         <script>
             document.ontouchmove = function(e) {e.preventDefault()};
-            touchEditor.InitWithContainer('canvas');
+            ctEditor.InitWithContainer('canvas');
        </script>
         <!-- end scripts -->
         <script>
