- some toolbox items, just the html, not css, not functions - realize everything needs some recoding, do i prototype? or keep working on the tcEditor singleton? Probaly need to just start prototyping and work more OO style

--- a/trunk/src/index.html
+++ b/trunk/src/index.html
@@ -26,10 +26,11 @@
         <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>-->
         <!-- scripts concatenated and minified via build script -->
         <script src="js/libs/palette.js"></script>
+        <script src="js/libs/colorselector.js"></script>
         <script src="js/cte-0.1.1.js"></script>
         <script>
             document.ontouchmove = function(e) {e.preventDefault()};
-            ctEditor.InitWithContainer('canvas');
+            ctEditor.initWithContainer('canvas');
        </script>
         <!-- end scripts -->
         <script>
