- finish implementation of colorPicker - Added a couple of  buttons, just visualy and functions but not functionality - more ui images added - added utils.js

--- a/trunk/src/index.html
+++ b/trunk/src/index.html
@@ -27,6 +27,7 @@
         <!-- scripts concatenated and minified via build script -->
         <script src="js/libs/palette.js"></script>
         <script src="js/libs/colorselector.js"></script>
+        <script src="js/utils.js"></script>
         <script src="js/cte-0.1.1.js"></script>
         <script>
             document.ontouchmove = function(e) {e.preventDefault()};
