- working rotation - load multiple projects

--- a/trunk/src/index.html
+++ b/trunk/src/index.html
@@ -30,8 +30,7 @@
         <script src="js/utils.js"></script>
         <script src="js/cte-0.2.js"></script>
         <script>
-            document.ontouchmove = function(e) {e.preventDefault()};
-            ctEditor.initWithContainer('canvas');
+            ctEditor.initWithContainer("canvas");
        </script>
         <!-- end scripts -->
         <script>
