--- a/trunk/src/index.html
+++ b/trunk/src/index.html
@@ -12,6 +12,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">  
         <meta name="description" content="Edit with multitouch gestures canvas objects on a brush">
         <meta name="viewport" content="width=device-width, user-scalable=no">
+        <meta name='apple-mobile-web-app-capable' content='yes' />
+        <meta name='apple-mobile-web-app-status-bar-style' content='black' />
+        <meta name='apple-touch-fullscreen' content='YES' />
+
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -21,17 +25,13 @@
         </div>
         <footer>
         </footer>
-        <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-        <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>-->
-        <!-- scripts concatenated and minified via build script -->
+        <script src="js/utils.js"></script>
         <script src="js/libs/palette.js"></script>
         <script src="js/libs/colorselector.js"></script>
-        <script src="js/utils.js"></script>
         <script src="js/cte-0.2.js"></script>
         <script>
             ctEditor.initWithContainer("canvas");
-       </script>
+        </script>
         <!-- end scripts -->
         <script>
         var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
